--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
+    "connect-timeout": "^1.9.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
